<resources>
    <string name="app_name">Just Java</string>
    <string name="quantity">Quantity</string>
    <string name="order">Order</string>
    <string name="quantityValue">0</string>
    <string name="priceValue">2</string>
    <string name="price">Price</string>
    <string name="toppings">Toppings</string>
    <string name="chocolate">With Chocolate</string>
    <string name="whippedcream">Whipped Cream</string>
</resources>
