<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/typical_dp"
    android:orientation="vertical"

    tools:context="com.example.user.justjava.MainActivity">

    <TextView
        android:text="@string/quantity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView"
        android:layout_marginTop="@dimen/typical_dp"
        android:layout_marginBottom="@dimen/typical_dp"
        android:textAllCaps="true"

        />

    <Button
        android:text="+"
        android:layout_width="@dimen/button_dimension"
        android:layout_height="@dimen/button_dimension"
        android:id="@+id/plus"
        android:onClick="increment"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/quantityValue"
        android:id="@+id/quantity_text_view"
        android:layout_marginTop="@dimen/typical_dp"
        android:layout_marginBottom="@dimen/typical_dp"
        android:textColor="#000000"
        android:textSize="16sp"
        />

    <Button
        android:text="-"
        android:layout_width="@dimen/button_dimension"
        android:layout_height="@dimen/button_dimension"
        android:id="@+id/minus"
        android:onClick="decrement"/>

    <TextView
        android:text="@string/price"
        android:layout_width="@dimen/button_dimension"
        android:layout_height="@dimen/button_dimension"
        android:id="@+id/textView_price"
        android:layout_marginTop="@dimen/typical_dp"
        android:layout_marginBottom="@dimen/typical_dp"
        android:textAllCaps="true"

        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/priceValue"
        android:id="@+id/price_text_view"
        android:layout_marginTop="@dimen/typical_dp"
        android:layout_marginBottom="@dimen/typical_dp"
        android:textColor="#000000"
        android:textSize="16sp"
        />


    <Button
        android:text="@string/order"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:id="@+id/button"
        android:onClick="submitOrder"
        />
</LinearLayout>
